[gd_scene load_steps=24 format=3 uid="uid://ko2rjpm0hw84"]

[ext_resource type="Texture2D" uid="uid://y6ej7u0lnynu" path="res://elementos/Interior.png" id="1_4vghw"]
[ext_resource type="Script" uid="uid://dsbo5trwqo8jh" path="res://juego_1aleatorio.gd" id="1_k0k2q"]
[ext_resource type="Texture2D" uid="uid://bqc8yd6bnae1k" path="res://elementos/Encimera.png" id="2_cu3bb"]
[ext_resource type="Texture2D" uid="uid://b4cxh0ltjy8eo" path="res://elementos/Personaje_1 1.png" id="2_v8nba"]
[ext_resource type="Texture2D" uid="uid://ce4qdrphvd3e2" path="res://elementos/Personaje_1 1 (1).png" id="3_k0k2q"]
[ext_resource type="Texture2D" uid="uid://bjlgtha35cqe6" path="res://elementos/Personaje_1 (1).png" id="4_jk7be"]
[ext_resource type="Texture2D" uid="uid://rscvqcvf11dh" path="res://elementos/Personaje_1 (2).png" id="5_b7lxx"]
[ext_resource type="Script" uid="uid://dr0lo3uh1t50m" path="res://juego_1_siguiente.gd" id="5_l66al"]
[ext_resource type="Texture2D" uid="uid://caa1knmj7432a" path="res://elementos/Bocadillo 1 (1).png" id="8_061x6"]
[ext_resource type="Texture2D" uid="uid://6htwa5tset1d" path="res://elementos/Bocadillo 1.png" id="9_nh326"]
[ext_resource type="Texture2D" uid="uid://di1giok4lovr" path="res://elementos/Bocadillo (2).png" id="10_n1dfy"]
[ext_resource type="Texture2D" uid="uid://clm3848wfu3b8" path="res://elementos/Bocadillo (3).png" id="11_jip1t"]
[ext_resource type="Texture2D" uid="uid://bt6v5f6lqv7c8" path="res://elementos/Chico3.png" id="12_k0k2q"]
[ext_resource type="Texture2D" uid="uid://c5md8bgfdti3s" path="res://elementos/Bocadillo.png" id="12_mhbej"]
[ext_resource type="Texture2D" uid="uid://drmnwvnbffne5" path="res://Cajaregistradora2.png" id="13_v8nba"]
[ext_resource type="Texture2D" uid="uid://dsea06i27hv55" path="res://Cajaregistradora_.png" id="14_k0k2q"]

[sub_resource type="Animation" id="Animation_k0k2q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chica2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(606, 437)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chico1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(609, 434)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("chica1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(603, 437)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("chico2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(609, 436)]
}

[sub_resource type="Animation" id="Animation_v8nba"]
resource_name = "personajes"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chica2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(610, 744), Vector2(606, 437)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chico1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(613, 782), Vector2(609, 434)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("chica1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(605, 782), Vector2(603, 437)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("chico2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(602, 745), Vector2(609, 436)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jk7be"]
_data = {
&"RESET": SubResource("Animation_k0k2q"),
&"personajes": SubResource("Animation_v8nba")
}

[sub_resource type="Theme" id="Theme_p56jb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_obsdl"]
texture = ExtResource("13_v8nba")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ki3cm"]
texture = ExtResource("14_k0k2q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nqrn6"]
texture = ExtResource("14_k0k2q")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_k0k2q")

[node name="Interior" type="Sprite2D" parent="."]
position = Vector2(561, 397)
scale = Vector2(0.31984, 0.320161)
texture = ExtResource("1_4vghw")

[node name="Bocadilloalbahaca" type="Sprite2D" parent="."]
visible = false
position = Vector2(561, 390.75)
scale = Vector2(0.31984, 0.315121)
texture = ExtResource("8_061x6")

[node name="Bocadillopiña" type="Sprite2D" parent="."]
visible = false
position = Vector2(561, 391)
scale = Vector2(0.31984, 0.315323)
texture = ExtResource("9_nh326")

[node name="Bocadillochampiñones" type="Sprite2D" parent="."]
visible = false
position = Vector2(561, 391)
scale = Vector2(0.31984, 0.315323)
texture = ExtResource("10_n1dfy")

[node name="Bocadilloaceitunas" type="Sprite2D" parent="."]
visible = false
position = Vector2(561, 391)
scale = Vector2(0.31984, 0.315323)
texture = ExtResource("11_jip1t")

[node name="Bocadillopeperoni" type="Sprite2D" parent="."]
visible = false
position = Vector2(561, 397)
scale = Vector2(0.31984, 0.320161)
texture = ExtResource("12_mhbej")

[node name="chico2" type="Sprite2D" parent="."]
visible = false
position = Vector2(609, 436)
scale = Vector2(0.31984, 0.320161)
texture = ExtResource("2_v8nba")

[node name="chica1" type="Sprite2D" parent="."]
visible = false
position = Vector2(603, 437)
scale = Vector2(0.318985, 0.320161)
texture = ExtResource("3_k0k2q")

[node name="chico1" type="Sprite2D" parent="."]
visible = false
position = Vector2(609, 434)
scale = Vector2(0.31984, 0.320161)
texture = ExtResource("4_jk7be")

[node name="chica2" type="Sprite2D" parent="."]
visible = false
position = Vector2(606, 437)
scale = Vector2(0.31984, 0.320161)
texture = ExtResource("5_b7lxx")

[node name="Chico3" type="Sprite2D" parent="."]
visible = false
position = Vector2(608, 433)
scale = Vector2(0.31984, 0.320161)
texture = ExtResource("12_k0k2q")

[node name="Encimera" type="Sprite2D" parent="."]
position = Vector2(561, 397)
scale = Vector2(0.31984, 0.320161)
texture = ExtResource("2_cu3bb")

[node name="personajes" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jk7be")
}

[node name="juego1siguiente" type="Button" parent="."]
offset_left = 720.0
offset_top = 446.0
offset_right = 812.0
offset_bottom = 510.0
scale = Vector2(3.48594, 3.6416)
theme = SubResource("Theme_p56jb")
theme_override_colors/font_color = Color(0.363707, 0.330877, 0.33908, 1)
theme_override_font_sizes/font_size = 6
theme_override_styles/hover = SubResource("StyleBoxTexture_obsdl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ki3cm")
theme_override_styles/normal = SubResource("StyleBoxTexture_nqrn6")
script = ExtResource("5_l66al")

[connection signal="pressed" from="juego1siguiente" to="juego1siguiente" method="_on_pressed"]
